@@ -1,4 +1,4 @@
-# BUBBA|TWO apt preferences
+# B3 apt preferences
 #
 # Changes in this file might break your system
 #
