@@ -2,7 +2,7 @@
 <!-- This is only a redirect web page, which redirects to the admin interface -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>BUBBA|2</title>
+	<title>B3</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 	<!-- 
